# AgenticAI-Prod-Implementation

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: __init__.py  agent_config.yaml  environment_config.yaml  llm_config.yaml  logging_config.yaml  model_config.yaml
data/: README.md
docs/: CI_CD_ACTIVATION.md  DEPLOYMENT.md  GETTING_STARTED.md  MULTI_REGION_DEPLOYMENT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md
examples/: collaborative_agents.py  llm_agent_example.py  multi_agent.py  reinforcement_learning.py  single_agent.py
helm/agenticai/: Chart.yaml  values.yaml
helm/agenticai/templates/: _helpers.tpl  deployment-api.yaml
k8s/: deploy.sh
k8s/autoscaling/: hpa.yaml
k8s/config/: configmap.yaml  secrets.yaml
k8s/deployments/: api.yaml  worker.yaml
k8s/ingress/: ingress.yaml
k8s/network/: networkpolicy.yaml
k8s/observability/: jaeger.yaml  otel-collector.yaml
k8s/rbac/: serviceaccount.yaml
k8s/servicemesh/: istio.yaml
k8s/statefulsets/: postgres.yaml  rabbitmq.yaml  redis.yaml
k8s/storage/: pvc.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: agent_performance.json  api_overview.json  system_resources.json
nginx/: nginx.conf
nginx/conf.d/: default.conf
notebooks/: agent_training.ipynb  experiment_results.ipynb  performance_analysis.ipynb
scripts/: backup.sh  init-db.sql  restore.sh  rollback.sh  start-production.bat  start-production.sh
src/agents/: __init__.py  autonomous_agent.py  base_agent.py  collaborative_agent.py  learning_agent.py  llm_agent.py  reasoning_agent.py
src/api/: __init__.py  auth.py  celery_app.py  config.py  database.py  main.py  telemetry.py
src/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/api/models/: __init__.py  agent.py  api_key.py  base.py  embedding.py  execution.py  task.py  user.py
src/api/routes/: __init__.py  agents.py  auth.py  health.py  tasks.py
src/api/schemas/: __init__.py  agent.py  auth.py  common.py  task.py  user.py
src/api/tasks/: __init__.py  agent.py  maintenance.py  (+1 more)
src/core/: __init__.py  decision_maker.py  executor.py  memory.py  planner.py  reasoning.py
src/environment/: __init__.py  base_env.py  simulator.py
src/utils/: __init__.py  logger.py  metrics.py  prompt_manager.py  token_tracker.py  validator.py  vector_store.py  visualizer.py
tests/: conftest.py  test_agents.py  test_auth.py  test_environment.py  test_health.py  test_llm_integration.py  test_reasoning.py  test_tasks.py
(+2 files in other folders)
