[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai"
version = "1.0.0"
description = "Comprehensive agentic AI template for intelligent autonomous systems"
authors = [
    {name = "Brij Kishore Pandey", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "ai",
    "agents",
    "reinforcement-learning",
    "autonomous-systems",
    "multi-agent",
    "reasoning",
    "planning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "python-json-logger>=2.0.4",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]
ml = [
    "torch>=2.0.0",
    "tensorflow>=2.12.0",
]
rl = [
    "gym>=0.26.0",
    "stable-baselines3>=2.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
    "nbformat>=5.9.0",
]
all = [
    "agentic-ai[dev,ml,rl,notebooks]",
]

[project.urls]
Homepage = "https://github.com/yourusername/agentic-ai"
Documentation = "https://github.com/yourusername/agentic-ai#readme"
Repository = "https://github.com/yourusername/agentic-ai"
Issues = "https://github.com/yourusername/agentic-ai/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
